--- a/css/homepage.css
+++ b/css/homepage.css
@@ -150,8 +150,6 @@
 }
 .event-poster {
     max-width: 100%;
-    height: 200px; /* Atur tinggi yang tetap, sesuaikan jika perlu */
-    object-fit: cover; /* Properti ini memastikan gambar mengisi area tanpa terdistorsi */
+    height: auto;
     display: block;
-    border-radius: 8px;
 }
