--- a/css/homepage.css
+++ b/css/homepage.css
@@ -148,8 +148,16 @@
     font-size: 0.75rem;
     color: #bbb;
 }
+.card-image-wrapper {
+    width: 100%;
+    margin-bottom: 1rem;
+    overflow: hidden; /* Tambahkan ini */
+    border-radius: 8px; /* Pastikan ini ada agar sudutnya melengkung */
+}
+
 .event-poster {
-    max-width: 100%;
+    width: 100%; /* Ubah max-width menjadi width */
     height: auto;
     display: block;
+    border-radius: 8px;
 }
